# matio-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  array.mat  data-poly.mat  data.mat  data.rs.mat
.github/workflows/: rust.yml
data/: array.mat  arrays.mat  data-poly.mat  data-rs.mat  data.rs.mat
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: bin2mat.rs  derive.rs  matstruct.rs  maybe.rs
src/: builder.rs  cell.rs  convert.rs  datatype.rs  lib.rs  mat.rs  mat_array.rs  matfile.rs  matstruct.rs  matvar.rs
src/cell/: cell.rs  cell_bounds.rs  cellvec.rs  convert.rs  last_cell.rs
src/cell/convert/: maybefrom.rs  maybeinto.rs
src/convert/: maybefrom.rs  maybeinto.rs
src/convert/maybefrom/: string.rs  tuple.rs
src/convert/maybeinto/: tuple.rs
src/matvar/: datatype.rs
sys/: Cargo.toml  README.md  build.rs  wrapper.h
sys/src/: bindings.rs
tests/: tests.rs
