[package]
name = "matio-rs"
version = "1.3.3"
edition = "2021"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT"
description = "Rust wrapper to MATLAB MAT file I/O library"
repository = "https://github.com/rconan/matio-rs"
documentation = "https://docs.rs/matio-rs"
readme = "README.md"
categories = ["api-bindings", "mathematics", "science"]

[dependencies]
ffi = { version = "0.2.4", path = "sys", package = "matio-rs-sys" }
paste = "1.0.7"
thiserror = "1.0.30"
derive = { version = "0.1.0", path = "derive", package = "matio-rs_derive" }
nalgebra = { version = "0.33", optional = true }

[dev-dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
serde = { version = "1.0.147", features = ["derive"] }
tempfile = "3.15.0"

[package.metadata.docs.rs]
all-features = true
