[package]
name = "matio-rs"
version = "1.6.0"
edition = "2024"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT"
description = "Rust wrapper to MATLAB MAT file I/O library"
repository = "https://github.com/rconan/matio-rs"
documentation = "https://docs.rs/matio-rs"
readme = "README.md"
categories = ["api-bindings", "mathematics", "science"]

[dependencies]
ffi = { version = "0.2.5", path = "sys", package = "matio-rs-sys" }
paste = "1.0.15"
thiserror = "2.0.17"
derive = { version = "0.1.0", path = "derive", package = "matio-rs_derive" }
nalgebra = { version = "0.33", optional = true }
faer = { version = "0.21.7", optional = true }

[dev-dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"

[features]
faer = ["dep:faer"]
nalgebra = ["dep:nalgebra"]

[package.metadata.docs.rs]
all-features = true
