[package]
name = "matio-rs"
version = "1.6.3"
edition = "2024"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT"
description = "Rust wrapper to MATLAB MAT file I/O library"
repository = "https://github.com/rconan/matio-rs"
documentation = "https://docs.rs/matio-rs"
readme = "README.md"
categories = ["api-bindings", "mathematics", "science"]

[dependencies]
ffi = { version = "0.2.5", path = "sys", package = "matio-rs-sys" }
paste = "1.0.15"
thiserror = "2.0.18"
derive = { version = "0.1.0", path = "derive", package = "matio-rs_derive" }
nalgebra = { version = "0.34", optional = true }
faer = { version = "0.23.2", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
bincode = {version = "2.0.1", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"

[features]
faer = ["dep:faer"]
nalgebra = ["dep:nalgebra"]

[package.metadata.docs.rs]
all-features = true
