[package]
name = "matio-rs_derive"
version = "0.1.0"
edition = "2021"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT"
description = "Rust wrapper to MATLAB MAT file I/O library"
repository = "https://github.com/rconan/matio-rs"
documentation = "https://docs.rs/matio-rs"
readme = "README.md"
categories = ["api-bindings", "mathematics", "science"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["derive", "full"] }
