[package]
name = "matio-rs-sys"
version = "0.2.4"
edition = "2021"
authors = ["Rod Conan <rconan@gmto.org>"]
license = "MIT"
description = "Rust binder to MATLAB MAT file I/O library"
repository = "https://github.com/rconan/matio-rs"
documentation = "https://docs.rs/matio-rs-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "mathematics", "science"]

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1.48"
